Fixed sizing issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app {
   display: flex;
   align-items: center;
+  justify-content: center;;
   flex-flow: row wrap;
   padding-left: 100px;
   padding-right: 100px;
